--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -P ./tsconfig.json",
+    "build": "./node_modules/.bin/tsc -P ./tsconfig.json",
     "start": "node ./dist/index.js",
     "build:start": "npm run build && npm run start",
     "dev": "./node_modules/.bin/nodemon",
