--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/tsc -P ./tsconfig.json",
+    "build": "ttsc -P ./tsconfig.json",
     "start": "node ./dist/index.js",
     "build:start": "npm run build && npm run start",
     "dev": "./node_modules/.bin/nodemon",
@@ -74,6 +74,7 @@
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "@zerollup/ts-transform-paths": "^1.7.18",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
@@ -83,7 +84,8 @@
     "prettier": "^2.3.2",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
+    "ttypescript": "^1.5.13"
   },
   "engines": {
     "node": ">=14.0.0"
