--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "<img src=\"https://ugeek.github.io/blog/images-blog/node.png\" width=\"150px\" align=\"right\" />",
   "main": "index.js",
   "scripts": {
-    "start": "ttsc -P ./backend/tsconfig.json && node ./backend/dist/index.js",
+    "start": "node ./backend/dist/index.js",
+    "build": "cd ./server && npm run build && cd ../client && npm run build --prod",
+    "heroku-prebuild": "npm install --prefix backend && npm install --prefix frontend ",
+    "heroku-postbuild": "cd ./backend && npm run build && cd ../frontend && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
