--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./backend/dist/index.js",
-    "build": "cd ./server && npm run build && cd ../client && npm run build --prod",
-    "heroku-prebuild": "npm install --prefix backend && npm install --prefix frontend ",
+    "build": "cd ./backend && npm run build && cd ../frontend && npm run build",
+    "heroku-prebuild": "npm install --prefix backend && npm install --prefix frontend",
     "heroku-postbuild": "cd ./backend && npm run build && cd ../frontend && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
