--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "<img src=\"https://ugeek.github.io/blog/images-blog/node.png\" width=\"150px\" align=\"right\" />",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server/dist",
+    "start": "cd ./server && node ./dist",
     "build": "cd ./server && npm run build && cd ../client && npm run build",
+    "build:start": "npm run build && npm run start",
     "heroku-prebuild": "npm install --prefix server && npm install --prefix client",
     "heroku-postbuild": "cd ./server && npm run build && cd ../client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
