--- a/server/package.json
+++ b/server/package.json
@@ -40,7 +40,6 @@
     "socket.io": "^4.4.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0",
-    "ttypescript": "^1.5.13",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
@@ -82,7 +81,8 @@
     "prettier": "^2.3.2",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
+    "ttypescript": "^1.5.13"
   },
   "engines": {
     "node": ">=16.0.0"
