--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/tsc -P ./tsconfig.json",
+    "build": "ttsc -P ./tsconfig.json",
     "start": "node ./dist/index.js",
     "build:start": "npm run build && npm run start",
-    "dev": "./node_modules/.bin/nodemon",
-    "test": "jest"
+    "dev": "./node_modules/.bin/nodemon"
   },
   "keywords": [],
   "author": "Brian Towers",
@@ -53,7 +52,6 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/minimist": "^1.2.2",
     "@types/morgan": "^1.9.3",
@@ -76,11 +74,9 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.3.1",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "supertest": "^6.1.6",
-    "ts-jest": "^27.1.2",
     "ts-node": "^10.2.1",
     "ttypescript": "^1.5.13"
   },
