--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "cd ./server && npm run build && cd ../client && npm run build",
     "build:start": "npm run build && npm run start",
     "heroku-prebuild": "npm install --prefix server && npm install --prefix client",
-    "heroku-postbuild": "npm run ./server/build && npm run ./client/build",
+    "heroku-postbuild": "cd ./server && npm run build && cd ../client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
